# streamlit-fpl

./: .isort.cfg  .pre-commit-config.yaml  .python-lint  app.py  constants.py  constants.yaml  models.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
