[tool.poetry]
name = "streamlit-fpl"
version = "0.2.0"
description = "Streamlit webapp for Fantasy Premier League"
authors = ["Louis Chan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
streamlit = "^1.26.0"
pyyaml = "^6.0.1"
pydantic = "^2.8.2"
pylint-pydantic = "^0.3.2"
pytz = "^2024.1"
pandas-stubs = "^2.2.2.240603"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
